--- a/app/views/HelloWorldPage.scala.html
+++ b/app/views/HelloWorldPage.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: Layout)
+@this(layout: templates.Layout)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
