--- a/app/views/general/ErrorTemplate.scala.html
+++ b/app/views/general/ErrorTemplate.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: Layout)
+@this(layout: templates.Layout)
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @layout(pageTitle = Some(pageTitle)) {
