--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -14,12 +14,12 @@
  * limitations under the License.
  *@
 
-@import views.FooterLinks
 @import config.AppConfig
+@import views.helpers.FooterLinks
 
 @this(
         govukLayout: GovukLayout,
-        head: Head
+        head: partials.Head
 )
 
 @(pageTitle: Option[String] = None,
