added integration tests and testing coverage and it's 100% coverage now

--- a/app/views/HelloWorldPage.scala.html
+++ b/app/views/HelloWorldPage.scala.html
@@ -24,3 +24,7 @@
     <h1 class="govuk-heading-xl">import-voluntary-disclosure-frontend</h1>
     <p class="govuk-body">@{messages("service.text")}</p>
 }
+
+@{
+ //$COVERAGE-OFF$
+}
