--- a/app/views/general/ErrorTemplate.scala.html
+++ b/app/views/general/ErrorTemplate.scala.html
@@ -23,3 +23,7 @@
     <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
     <p class="govuk-body">@{Text(message).asHtml}</p>
 }
+
+@{
+ //$COVERAGE-OFF$
+}
