some cleaning up before adding tests

--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -19,20 +19,22 @@
 
 @this(
         govukLayout: GovukLayout,
+        appConfig: AppConfig,
+        footerLinks: FooterLinks,
         head: partials.Head
 )
 
 @(pageTitle: Option[String] = None,
         headBlock: Option[Html] = None,
         scriptsBlock: Option[Html] = None
-)(contentBlock: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
 
 @govukLayout(
     pageTitle = pageTitle,
     headBlock = Some(head(headBlock)),
     scriptsBlock = scriptsBlock,
     beforeContentBlock = None,
-    footerItems = FooterLinks()
+    footerItems = footerLinks.links()
 )(contentBlock)
 
 @{
