--- a/app/views/GroupEnrolledForPayeView.scala.html
+++ b/app/views/GroupEnrolledForPayeView.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2020 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,12 +12,18 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package utils
+@import templates.Layout
 
-trait CurrencyFormatter {
-  def currencyFormat(amt: BigDecimal): String = f"&pound;$amt%,1.2f".replace(".00","")
+@this(layout: Layout)
+
+@()(implicit request: Request[_], messages: Messages)
+
+@layout(pageTitle = Some("coronavirus-jrb-claim-frontend")) {
+    <h1 class="govuk-heading-xl">Group enrolled for PAYE</h1>
 }
 
-object CurrencyFormatter extends CurrencyFormatter
+@{
+    //$COVERAGE-OFF$
+}
