--- a/app/views/general/ErrorTemplate.scala.html
+++ b/app/views/general/ErrorTemplate.scala.html
@@ -14,11 +14,10 @@
  * limitations under the License.
  *@
 
-@import config.AppConfig
+@this(layout: templates.Layout,
+        appConfig: AppConfig)
 
-@this(layout: templates.Layout)
-
-@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
 @layout(pageTitle = Some(pageTitle)) {
     <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
     <p class="govuk-body">@{Text(message).asHtml}</p>
