--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -14,11 +14,9 @@
  * limitations under the License.
  *@
 
-@import config.AppConfig
 @import views.helpers.FooterLinks
 
-@this(
-        govukLayout: GovukLayout,
+@this(govukLayout: GovukLayout,
         appConfig: AppConfig,
         footerLinks: FooterLinks,
         head: partials.Head
