CIVDT-43: Added the User Type page (#13)
* change context

* adding new Number of entries page WIP

* added correct url and started unit tests

* added unit tests and updated readme

* updated index controller to redirect to the first page

wip

* added tests for constraits and mappings and additional tests to increase coverage

* updated copyright

* Corrected nav title in AFL constants file

* Removed implicit AppConfig from controller and updated headers

* Added error message tests for user type view

* refactored unit tests

Co-authored-by: Ian Ralphs <29889314+ian-ralphs@users.noreply.github.com>
Co-authored-by: charlie.ashton <19330235+charlieashton@users.noreply.github.com>
Co-authored-by: macgrewal <7713555+macgrewal@users.noreply.github.com>

--- a/app/views/components/back_link.scala.html
+++ b/app/views/components/back_link.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,24 +12,15 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package controllers
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-import base.ControllerSpecBase
-import play.api.http.Status
-import play.api.test.Helpers._
+@this(govukBackLink : GovukBackLink)
 
-class IndexControllerSpec extends ControllerSpecBase {
+@()
 
-  private lazy val controller = new IndexController(appConfig, messagesControllerComponents)
-
-  "GET /" should {
-    "return 303" in {
-      val result = controller.onPageLoad(fakeRequest)
-      status(result) mustBe Status.SEE_OTHER
-      redirectLocation(result) mustBe Some(controllers.routes.UserTypeController.onLoad().url)
-    }
-
-  }
-}
+@govukBackLink(BackLink(
+ href = "#",
+ content = Text("Back")
+))
