updated h1 and inputRadio class to large instead of xlarge

--- a/app/views/components/h1.scala.html
+++ b/app/views/components/h1.scala.html
@@ -19,5 +19,5 @@
 @(headingMsg: String)(implicit messages: Messages)
 
 <header class="hmrc-page-heading">
- <h1 class="govuk-heading-xl">@messages(headingMsg)</h1>
+ <h1 class="govuk-heading-l">@messages(headingMsg)</h1>
 </header>
