--- a/app/views/components/h1.scala.html
+++ b/app/views/components/h1.scala.html
@@ -21,3 +21,7 @@
 <header class="hmrc-page-heading">
  <h1 class="govuk-heading-l">@messages(headingMsg)</h1>
 </header>
+
+@{
+ //$COVERAGE-OFF$
+}
