updated code to fill data

--- a/app/views/components/yesNoRadio.scala.html
+++ b/app/views/components/yesNoRadio.scala.html
@@ -25,7 +25,7 @@
         classes: String = "govuk-fieldset__legend--l",
         yesRadioMsg: String = "site.yes",
         noRadioMsg: String = "site.no",
-        inline: Boolean = false
+        inline: Boolean = true
 )(implicit messages: Messages)
 
 @govukRadios(Radios(
