--- a/app/views/AcceptanceDateView.scala.html
+++ b/app/views/AcceptanceDateView.scala.html
@@ -21,11 +21,11 @@
         yesNoRadio: components.yesNoRadio,
         button: components.button)
 
-@(form: Form[_], userAnswers: UserAnswers)(implicit request: Request[_], messages: Messages)
+@(form: Form[_])(implicit request: Request[_], messages: Messages)
 
     @layout(pageTitle = Some(messages("acceptanceDate.pageTitle"))) {
 
-    @back_link()
+        @back_link()
 
         @errorSummary(form.errors)
 
@@ -33,6 +33,7 @@
             @yesNoRadio(
                 form,
                 headingKey = "acceptanceDate.heading",
+                inline = false,
                 yesRadioMsg = "acceptanceDate.yes",
                 noRadioMsg = "acceptanceDate.no"
             )
