Added back link to the layout and updated UserType to hide back-link

--- a/app/views/UserTypeView.scala.html
+++ b/app/views/UserTypeView.scala.html
@@ -25,7 +25,7 @@
 
 @(form: Form[_], userAnswers: UserAnswers)(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Some(messages("userType.pageTitle"))) {
+    @layout(pageTitle = Some(messages("userType.pageTitle")), showBackLink = false) {
 
         @errorSummary(form.errors)
 
