added back link test to existing view specs and fixed title a11y issue

--- a/app/views/HelloWorldPage.scala.html
+++ b/app/views/HelloWorldPage.scala.html
@@ -20,7 +20,7 @@
 
 @(userAnswers: UserAnswers)(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Some("import-voluntary-disclosure-frontend")) {
+    @layout(pageTitle = "import-voluntary-disclosure-frontend") {
         <h1 class="govuk-heading-xl">import-voluntary-disclosure-frontend</h1>
         <p class="govuk-body">@{
             messages("service.text")
