--- a/app/views/EntryDetailsView.scala.html
+++ b/app/views/EntryDetailsView.scala.html
@@ -25,7 +25,7 @@
 
 @(form: Form[_])(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Some(messages("entryDetails.pageTitle"))) {
+    @layout(pageTitle = messages("entryDetails.pageTitle"), form = Some(form)) {
         @errorSummary(form.errors)
 
         @h1(messages("entryDetails.title"))
