--- a/app/views/NumberOfEntriesView.scala.html
+++ b/app/views/NumberOfEntriesView.scala.html
@@ -26,8 +26,7 @@
 
 @(form: Form[_])(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Some(messages("numberOfEntries.pageTitle"))) {
-        @back_link()
+    @layout(pageTitle = messages("numberOfEntries.pageTitle"), form = Some(form)) {
 
         @errorSummary(form.errors)
 
