--- a/app/views/UserTypeView.scala.html
+++ b/app/views/UserTypeView.scala.html
@@ -25,7 +25,7 @@
 
 @(form: Form[_], userAnswers: UserAnswers)(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Some(messages("userType.pageTitle")), showBackLink = false) {
+    @layout(pageTitle = messages("userType.pageTitle"), form = Some(form), showBackLink = false) {
 
         @errorSummary(form.errors)
 
