--- a/app/views/EntryDetailsView.scala.html
+++ b/app/views/EntryDetailsView.scala.html
@@ -25,7 +25,11 @@
 
 @(form: Form[_])(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = messages("entryDetails.pageTitle"), form = Some(form)) {
+@layout(
+    pageTitle = messages("entryDetails.pageTitle"),
+    form = Some(form),
+    customBackLinkUrl = Some(controllers.routes.NumberOfEntriesController.onLoad)) {
+
     @errorSummary(form.errors)
 
     @h1(messages("entryDetails.title"))
