made review comment changes

--- a/app/views/AcceptanceDateView.scala.html
+++ b/app/views/AcceptanceDateView.scala.html
@@ -30,9 +30,7 @@
             @yesNoRadio(
                 form,
                 headingKey = "acceptanceDate.heading",
-                inline = false,
-                yesRadioMsg = "acceptanceDate.yes",
-                noRadioMsg = "acceptanceDate.no"
+                inline = false
             )
 
             @button("common.button.continue")
