CIVDT-81: What have you underpaid page (#21)
* adding route

* added UnderpaymentTypeController with GET/POST methods for temp placeholders

* started working on view
add header and back button

* added form, page, message values and the GET should be done

* adding bits for the POST

* post saves data for one value

* post now sends and persists data

* working on fixing form filling

* formatting routes file

* updated the data submission and storage

* updating views and components to remove unneeded injections and turn off coverage

* removed the back link from the view

* get tests are done

* controller GET and POST tests are done

* added tests for the form provider

* tests should be done

* added form errors

* fixed tests after the merge of master

* added the back button

* changed the back button to take to the same page

* updated the controller redirections and their specs

* updated the title

* updated the title for spec as well

* fixed the back button

* fixed back button tests

* made the view take a Call instead of boolean
updated the controller and tests for this

* updated the view spec to check that errors are not displayed when no errors on the form
refactored static content into a separate group of tests

* updated the test wording

* renamed the method and updated the value

* reworked the controller, view and viewSpec slightly

* added additional tests for the back button

* updating css selector for error message test

* refactoring variable name

* refactoring css selectors to use classses for errors

* updated the tests based on the comments

--- a/app/views/components/inputRadio.scala.html
+++ b/app/views/components/inputRadio.scala.html
@@ -41,3 +41,7 @@
     items = items,
     errorMessage = form("value").error.map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
 ))
+
+@{
+    //$COVERAGE-OFF$
+}
