CIVDT-53: Create supporting documentation page (#18)
* supporting Doc page with unit tests
* Updated views to stop coverage of generated code
* Updated config driven markup generation

Co-authored-by: macgrewal <7713555+macgrewal@users.noreply.github.com>

--- a/app/views/components/back_link.scala.html
+++ b/app/views/components/back_link.scala.html
@@ -21,3 +21,7 @@
 @(url: Option[Call] = None)(implicit messages: Messages)
 
 @govukBackLink(BackLink(href = url.fold("#")(customUrl => customUrl), content = Text(messages("common.back")), attributes = Map("id" -> "back-link")))
+
+@{
+ //$COVERAGE-OFF$
+}
