--- a/app/views/components/inputNumber.scala.html
+++ b/app/views/components/inputNumber.scala.html
@@ -45,3 +45,6 @@
     attributes = if(isDecimal) Map.empty else Map("inputmode" -> "numeric", "pattern" -> "[0-9]*")
 ))
 
+@{
+    //$COVERAGE-OFF$
+}
