--- a/app/views/components/yesNoRadio.scala.html
+++ b/app/views/components/yesNoRadio.scala.html
@@ -53,3 +53,7 @@
     ),
     errorMessage = form("value").error.map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
 ))
+
+@{
+    //$COVERAGE-OFF$
+}
