--- a/app/views/components/bullets.scala.html
+++ b/app/views/components/bullets.scala.html
@@ -16,10 +16,14 @@
 
 @this()
 
-@(headingMsg: String)(implicit messages: Messages)
+@(items: Seq[Html], isWarning: Boolean = false, numberList: Boolean = false)(implicit messages: Messages)
 
-<h1 class="govuk-heading-l">@messages(headingMsg)</h1>
+<ul class="govuk-list govuk-list--bullet @if(isWarning){govuk-warning-text__text govuk-!-margin-top-5} @if(numberList){govuk-list govuk-list--number}">
+ @items.map { item =>
+  <li>@item</li>
+ }
+</ul>
 
 @{
-//$COVERAGE-OFF$
+ //$COVERAGE-OFF$
 }
