--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -74,3 +74,6 @@
     form.errors.map(err => !err.args.filter(arg => arg.contains(subId)).isEmpty).filter(_.equals(true)).headOption.getOrElse(false)
 }
 
+@{
+    //$COVERAGE-OFF$
+}
