CIVDT-83: Added Customs Procedure Code page
* CIVDT-83: Added Customs Procedure Code page

--- a/app/views/CustomsProcedureCodeView.scala.html
+++ b/app/views/CustomsProcedureCodeView.scala.html
@@ -23,17 +23,16 @@
 @(form: Form[_])(implicit request: Request[_], messages: Messages)
 
     @layout(
-        pageTitle = messages("acceptanceDate.pageTitle"),
+        pageTitle = messages("customsProcedureCode.pageTitle"),
         form = Some(form),
-        customBackLinkUrl = Some(controllers.routes.EntryDetailsController.onLoad)) {
+        customBackLinkUrl = Some(controllers.routes.CustomsProcedureCodeController.onLoad)) {
 
         @errorSummary(form.errors)
 
-        @formHelper(action = controllers.routes.AcceptanceDateController.onSubmit()) {
+        @formHelper(action = controllers.routes.CustomsProcedureCodeController.onSubmit()) {
             @yesNoRadio(
                 form,
-                headingKey = "acceptanceDate.heading",
-                inline = false
+                headingKey = "customsProcedureCode.heading"
             )
 
             @button("common.button.continue")
