--- a/app/views/UnderpaymentSummaryView.scala.html
+++ b/app/views/UnderpaymentSummaryView.scala.html
@@ -44,7 +44,7 @@
     }
 
     @linkButton(
-        url = controllers.routes.UnderpaymentSummaryController.onLoad().url,
+        url = controllers.routes.DefermentController.onLoad().url,
         value = messages("common.continue")
     )
 }
