--- a/app/views/FileUploadSummaryView.scala.html
+++ b/app/views/FileUploadSummaryView.scala.html
@@ -30,7 +30,7 @@
 
         @h1(messages("addRestaurant.heading"))
 
-        @addToList(answers)
+        @addToList(answers, changeLinkRequired = false)
 
         @linkButton(
             url = controllers.routes.TraderContactDetailsController.onLoad().url,
