CIVDT-54: Added the file upload feature (#35)
* File upload view

* upscan connector

* connector tests

* Refactored unit test for upscan-initiate connector and httpParser

* Upscan service for initiate journey

* Upscan controller and view

* Cleaned up Upscan service and removed println statement

* Reduced noise in logs (dead letters + INFO)

* Added upscan response handler

* File store repository

* Tests for file upload view

* Tests for controller

* added it test for file repo

* Callback handler

* Added tests for callback handler

* added polling page

* Integrate with Upload Summary page

* tests for integration with Summary Page

* refactored controller

* Point supporting docs page to upload file page

* added progress view test

* removed thread sleep used for testing

* Added delay following synchronous success callback before polling starts

* internal route for upscan callback

* changed mime types to file types

* review comments

* Removed dependency on mongo in unit tests

Co-authored-by: macgrewal <7713555+macgrewal@users.noreply.github.com>

--- a/app/views/SupportingDocView.scala.html
+++ b/app/views/SupportingDocView.scala.html
@@ -36,7 +36,7 @@
 
     @bullets(appConfig.allowedUploadFileTypes.map(Html(_)))
 
-    @linkButton(url = controllers.routes.SupportingDocController.onLoad().url,messages(("common.button.continue")))
+    @linkButton(url = controllers.routes.UploadFileController.onLoad().url,messages(("common.button.continue")))
 }
 
 
