Changed routing so the upload document pages are included in the flow (#41)
Updated unit tests

--- a/app/views/SupportingDocView.scala.html
+++ b/app/views/SupportingDocView.scala.html
@@ -24,9 +24,10 @@
       linkButton: components.linkButton
       )
 
-@()(implicit request: Request[_],appConfig: AppConfig, messages: Messages)
+@(backLink: Call)(implicit request: Request[_],appConfig: AppConfig, messages: Messages)
 
-@layout(pageTitle = messages("SupportDoc.pageTitle")) {
+@layout(pageTitle = messages("SupportDoc.pageTitle"),
+    customBackLinkUrl = Some(backLink)) {
 
     @h1(messages("SupportDoc.heading"))
 
