CIVDT-294: Confirmation Page (#52)
* Added controller
Added view

* Added view content

* Added view spec

* Removed controller and route

* review comments

Co-authored-by: dannybassi <72074461+dannybassi@users.noreply.github.com>

--- a/app/views/components/h2.scala.html
+++ b/app/views/components/h2.scala.html
@@ -16,9 +16,13 @@
 
 @this()
 
-@(headingMsg: String)(implicit messages: Messages)
+@(headingMsg: String, id: Option[String] = None)(implicit messages: Messages)
 
-<h2 class="govuk-heading-m">@messages(headingMsg)</h2>
+ @if(id.isDefined){
+  <h2 class="govuk-heading-m" id ="@id">@messages(headingMsg)</h2>
+ } else {
+  <h2 class="govuk-heading-m" >@messages(headingMsg)</h2>
+ }
 
 @{
  //$COVERAGE-OFF$
