CIVDT-303: Item Number Page (#53)
item number functionality

--- a/app/views/ItemNumberView.scala.html
+++ b/app/views/ItemNumberView.scala.html
@@ -15,36 +15,28 @@
  *@
 
 @this(layout: templates.Layout,
-        formHelper: FormWithCSRF,
-        h1: components.h1,
-        errorSummary: components.errorSummary,
-        button: components.button,
-        inputNumber: components.inputNumber
+      formHelper: FormWithCSRF,
+      errorSummary: components.errorSummary,
+      button: components.button,
+      inputNumber: components.inputNumber
 )
 
 @(form: Form[_], backLink: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(
-    pageTitle = messages("boxNumber.pageTitle"),
+   @layout(
+    pageTitle = messages("itemNo.pageTitle"),
     form = Some(form),
     customBackLinkUrl = Some(backLink)) {
 
     @errorSummary(form.errors)
 
-    @formHelper(action = controllers.routes.BoxNumberController.onSubmit()) {
-        @inputNumber(
-            form = form,
-            id = "value",
-            name = "value",
-            label = messages("boxNumber.heading"),
-            classes = Some("govuk-fieldset__legend govuk-input--width-5"),
-            isPageHeading = true
-        )
-        @button("common.button.continue")
-    }
+    @formHelper(action = controllers.routes.ItemNumberController.onSubmit()) {
+      @inputNumber(form = form, id = "itemNumber", name = "itemNumber", label = messages("itemNo.pageHeader"), isPageHeading = true, classes = Some("govuk-fieldset__legend govuk-input--width-5"))
+      @button("common.button.continue")
 
-}
+    }
+  }
 
 @{
-    //$COVERAGE-OFF$
+//$COVERAGE-OFF$
 }
