--- a/app/views/TextAmendmentView.scala.html
+++ b/app/views/TextAmendmentView.scala.html
@@ -23,7 +23,7 @@
         inputText: components.inputText
 )
 
-@(form: Form[_], box: BoxType, backLink: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], box: BoxType, backLink: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @bodyMessage=@{
     if (messages(s"box${box.boxNumber}.pageBody").equals(s"box${box.boxNumber}.pageBody")) {
         None
@@ -43,11 +43,11 @@
 
         @bodyMessage.map{msg => @p{ @msg } }
 
-        @formHelper(action = controllers.routes.UnderpaymentReasonAmendmentController.onSubmit()) {
+        @formHelper(action = controllers.routes.UnderpaymentReasonAmendmentController.onSubmit(box.boxNumber)) {
             @inputText(form, "original", "original", messages("amendmentValue.originalAmount"), false,
-                classes = Some(s"govuk-input--width-${box.inputWidth}"))
+                classes = box.inputClass)
             @inputText(form, "amended", "amended", messages("amendmentValue.amendedAmount"), false,
-                classes = Some(s"govuk-input--width-${box.inputWidth}"))
+                classes = box.inputClass)
             @button("common.button.continue")
         }
     }
