Renamed Trader specific models to Contact models (#61)

--- a/app/views/ImporterAddressView.scala.html
+++ b/app/views/ImporterAddressView.scala.html
@@ -23,7 +23,7 @@
         yesNoRadio: components.yesNoRadio
 )
 
-@(form: Form[_], traderAddress: TraderAddress)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], traderAddress: ContactAddress)(implicit request: Request[_], messages: Messages)
 
     @layout(
         pageTitle = messages("importerAddress.pageTitle"),
