CIVDT-312: Underpayment reasons boxes summary page  (#62)
Underpayment reasons boxes summary page

--- a/app/views/UnderpaymentSummaryView.scala.html
+++ b/app/views/UnderpaymentSummaryView.scala.html
@@ -44,7 +44,7 @@
     }
 
     @linkButton(
-        url = controllers.routes.SupportingDocController.onLoad().url,
+        url = controllers.routes.BoxGuidanceController.onLoad().url,
         value = messages("common.continue")
     )
 }
