--- a/app/views/ConfirmReasonDetailView.scala.html
+++ b/app/views/ConfirmReasonDetailView.scala.html
@@ -13,33 +13,32 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *@
-
 @this(layout: templates.Layout,
         govukSummaryList: GovukSummaryList,
         h1: components.h1,
-        linkButton: components.linkButton
+        formHelper: FormWithCSRF,
+        button: components.button
 )
 
 @(reasons: Seq[SummaryList], backLink: Call)(implicit request: Request[_], messages: Messages)
 
-    @layout(
-        pageTitle = messages("confirmReason.pageTitle"),
-        customBackLinkUrl = Some(backLink)
-    ) {
+@layout(
+    pageTitle = messages("confirmReason.pageTitle"),
+    customBackLinkUrl = Some(backLink)
+) {
 
-        @h1(messages("confirmReason.heading"))
+    @h1(messages("confirmReason.heading"))
 
-        @reasons.map { reason =>
-            @govukSummaryList(reason)
-
-            @linkButton(
-                controllers.routes.ConfirmReasonDetailController.onSubmit().url,
-                messages("common.button.continue")
-            )
-        }
-
+    @reasons.map { reason =>
+        @govukSummaryList(reason)
     }
 
-    @{
-        //$COVERAGE-OFF$
+    @formHelper(action = controllers.routes.ConfirmReasonDetailController.onSubmit()) {
+        @button("common.button.continue")
     }
+
+}
+
+@{
+    //$COVERAGE-OFF$
+}
